--- a/public/css/loginstyle.css
+++ b/public/css/loginstyle.css
@@ -1,8 +1,66 @@
-.bodyApp {
-    background-color:blue; 
+body {
+    background-image: url(../img/NMAbackground1.jpg);
+    background-size: 120% 60%;
+    position: center;
+    opacity:1 !important; 
 }
 
-.loginBox
-{
-    background-color: #180030;
+.loginBox {
+    background-color: #180030; 
+    opacity:0,7 !important;
+    width:900px; /* ширина блока */
+    height: 525px; /* высота блока */
+    position: absolute;
+    margin: 40%;
+    box-sizing: border-box;
+    border-radius: 45px; /* закругленные углы снизу */
 }
+
+.email {
+    background-color: #3B2551;
+    width: 20px;
+    height: 14px; /* ширина */
+    border-radius: 45px;
+    position: absolute;
+    font-family: 'Girassol', cursive;
+    font-size: 16px;
+    left: 45%;
+    top: 25%;
+    flex-direction: row;
+    margin-left: -20px;
+    margin-top: -20px
+}
+
+.password {
+    width: 20px;
+    height: 14px; /* ширина */
+    border-radius: 15px; 
+    position: absolute;
+    font-family: 'Girassol', cursive;
+    font-size: 16px;
+    left: 45%;
+    top: 50%;
+    margin-left: -20px;
+    margin-top: -20px;/* закругленные углы снизу */
+}
+
+.btn-continue {
+    background: #EAA41C; /* фон */
+    border-radius: 15px; /* закругленные углы */
+    margin: 250px;
+    display: table-cell;
+    height: 75px;
+    vertical-align: middle !important; /* отступы */
+    padding: 22px 20px; /* оступы для текста */ 
+    cursor: pointer;
+    font-family: 'Girassol', cursive;
+    font-size: 16px;
+    color: #180030; 
+    position: absolute;
+    left: 50%;
+    top: 85%;
+    margin-left: -20px;
+    margin-top: -20px
+    
+}
+
