--- a/public/css/headerFooter.css
+++ b/public/css/headerFooter.css
@@ -3,17 +3,26 @@
 }
 
 .headerBox {
-    height: 100px;
     width: auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
     background-color: #180030;
+    overflow-inline: 20px;
+}
+
+.logoMolecule {
+    display: flex;
+    align-items: center;
+    margin-top: 0;
+    margin-bottom: 1rem;
 }
 
 .logo {
     width: 65px;
     height: auto;
+    padding: 0px 15px 0px 0px;
 }
 
 .headerTitle {
@@ -32,7 +41,12 @@ a, .headerBox{
     display: inline-block;
 }
 
-.nav-link {
-    display: flex;
-    flex-wrap: wrap;
+.nav-item {
+    display: inline-block;
+    font-size: 22px;
+    line-height: 29px;
+}
+
+.loginBtn {
+    padding: 0px 20px 0px 0px;
 }
