--- a/public/css/loginstyle.css
+++ b/public/css/loginstyle.css
@@ -1,7 +1,8 @@
 body {
     background-image: url(../img/loginFronted/NevermoreAcademy.webp);
-    background-size: 120% 60%;
-    position: center;
+    background-repeat: no-repeat; 
+    background-size: cover;
+    position: center no-repeat;
     opacity: 0,6 !important; 
 }
 
