--- a/public/css/loginstyle.css
+++ b/public/css/loginstyle.css
@@ -1,7 +1,15 @@
+* {
+    font-family: 'Girassol', cursive;
+}
+
 body {
     background-image: url(../img/loginFronted/nevermoreBg.jpg);
     background-repeat: no-repeat; 
     background-size: cover;
+}
+
+.loginBox.login {
+    padding: 60px 0px;
 }
 
 .loginBox {
@@ -42,7 +50,15 @@ body {
 }
 
 .loginBox .loginBoxBody form input:focus {
-     box-shadow: 0 0 0 0.15rem rgb(234 164 28 / 50%);
+    box-shadow: 0 0 0 0.15rem rgb(234 164 28 / 50%);
+}
+
+.loginBox .loginBoxBody form .form-check-input {
+    margin-right: 10px;
+    border-radius: 5px;
+    width: 25px;
+    height: 25px;
+    padding: 0;
 }
 
 .loginBox .loginBoxBody form button {
